--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <header>
         <nav>
-
+            <a href="#">Dev Full Stack</a>
+            <ul>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="https://github.com/eliezerrb/" target="_blank">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -22,7 +27,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
