--- a/index.html
+++ b/index.html
@@ -1,33 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu perfil</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="#">Dev Full Stack</a>
-            <ul>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="https://github.com/eliezerrb/" target="_blank">Contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="#">Dev Full Stack</a>
+        <ul>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li>
+            <a href="https://github.com/eliezerrb/" target="_blank">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section>
+      <section>
+        <div>
+          <img src="img/profile.svg" alt="Meu perfil" />
+        </div>
+        <h1>Alex Brown</h1>
+        <p>Full stack - Spring - React</p>
+      </section>
+      <section>
+        <h2>Portfolio</h2>
 
-        </section>
-        <section>
-
-        </section>
+        <div>
+          <img src="img/portfolio1.png" alt="Portfolio 1" />
+          <img src="img/portfolio2.png" alt="Portfolio 2" />
+          <img src="img/portfolio3.png" alt="Portfolio 3" />
+          <img src="img/portfolio4.png" alt="Portfolio 4" />
+          <img src="img/portfolio5.png" alt="Portfolio 5" />
+          <img src="img/portfolio6.png" alt="Portfolio 6" />
+        </div>
+      </section>
     </main>
     <footer>
-
+      <div>Siga-nos</div>
+      <div>
+        <a href="https://www.instagram.com/angelica_manual_da_familia"
+          ><img src="img/instagram.png" alt="Instagram"
+        /></a>
+        <a href="https://www.youtube.com/@angelica-manualdafamilia2479"
+          ><img src="img/youtube.png" alt="Youtube"
+        /></a>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
