--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </section>
     </main>
     <footer>
-      <div>Siga-nos</div>
-      <div>
+      <div class="footer-title">Siga-nos</div>
+      <div class="social-container">
         <a href="https://www.instagram.com/angelica_manual_da_familia"
           ><img src="img/instagram.png" alt="Instagram"
         /></a>
